--- a/desafio/modulo 02/desafio 12/desafio12.html
+++ b/desafio/modulo 02/desafio 12/desafio12.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <header>
-        <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
+        <h1>
+            Cordel Moderno
+        </h1>
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+        </p>
     </header>
     
     <section class="normal">
@@ -25,7 +29,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -61,7 +65,7 @@
     </section>
 
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
