--- a/desafio/modulo 02/desafio 12/desafio12.html
+++ b/desafio/modulo 02/desafio 12/desafio12.html
@@ -8,9 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>
-            Cordel Moderno
-        </h1>
+        <h1> Cordel Moderno </h1>
         <p>
             Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
         </p>
