--- a/exercicios/modulo-03/ex023/tabela001.html
+++ b/exercicios/modulo-03/ex023/tabela001.html
@@ -4,29 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table{
+            width: 500px;
+            border-collapse: collapse;
+            border: 5px solid red;
+        } 
+
+        tr.linha {
+            background-color: gray;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 8px;
+        }
+
+        td.dado{
+            background-color: yellow;
+        }
+
+        .numero{
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
+    <!--
+        HIERARQUIA DE TABELAS (simples)
+        TABLE = tabela
+            TABLE ROW = linha de tabela
+                TABLE HEADER = cabeçalho de tabela
+                TABLE DATA = dado de tabela
+
+    -->
     <table>
         <tr> <!-- Primeira linha -->
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
         </tr>
-        <tr> <!-- Segunda linha -->
-            <td></td>
-            <td></td>
-            <td></td>
+        <tr class="linha"> <!-- Segunda linha -->
+            <td>A2</td>
+            <td>B2</td>
+            <td class="numero">C2</td>
         </tr>
         <tr> <!-- Terceira linha -->
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>A3</td>
+            <td>B3</td>
+            <td class="numero">C3</td>
         </tr>
         <tr> <!-- Quarta linha -->
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>A4</td>
+            <td class="dado">B4</td>
+            <td>C4</td>
+        </tr>
+        <tr>
+            <td>A5</td>
+            <td>B5</td>
+            <td>C5</td>
+            <td>D5</td>
+        </tr>
+        <tr>
+            <td>A6</td>
+            <td>B6</td>
         </tr>
     </table>
 </body>
