--- a/exercicios/modulo-03/ex023/tabela002.html
+++ b/exercicios/modulo-03/ex023/tabela002.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabelas</title>
+    <title>Alinhamento de Tabelas</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
         }
 
         table{
-            width: 500px;
+            width: 400px;
+            height: 400px;
             border-collapse: collapse;
-            border: 5px solid red;
         } 
 
-        tr.linha {
-            background-color: gray;
-        }
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center; /* Alinhamento Horizotal */
+            vertical-align: middle;
         }
 
-        td.dado{
-            background-color: yellow;
+        .numero{
+            text-align: right;
         }
 
     </style>
@@ -46,7 +45,7 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha"> <!-- Segunda linha -->
+        <tr> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
             <td class="numero">C2</td>
@@ -58,18 +57,8 @@
         </tr>
         <tr> <!-- Quarta linha -->
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
-        </tr>
-        <tr>
-            <td>A5</td>
-            <td>B5</td>
-            <td>C5</td>
-            <td>D5</td>
-        </tr>
-        <tr>
-            <td>A6</td>
-            <td>B6</td>
         </tr>
     </table>
 </body>
