--- a/exercicios/modulo-03/ex023/tabela006.html
+++ b/exercicios/modulo-03/ex023/tabela006.html
@@ -25,11 +25,11 @@
             padding: 8px;
         }
 
-        col.cnome {
-            background-color: chartreuse;
+        .amarelo {
+            background-color: yellow;
         }
 
-        col.cgrupo {
+        .vermelho {
             background-color: red;
         }
     </style>
@@ -39,9 +39,9 @@
 
     <table>
         <colgroup>
-            <col class="cnome">
-            <col class="cgrupo" span="2">
-            <col class="cprof">
+            <col class="amarelo">
+            <col class="vermelho" span="2">
+            <col class="amarelo">
         </colgroup>
         <caption>Cadastro</caption>
         <tr>
