create iframe02.html and update iframe.html

--- a/exercicios/modulo-04/ex024/iframe.html
+++ b/exercicios/modulo-04/ex024/iframe.html
@@ -14,6 +14,6 @@
         para aprender a programar.
     </p>
 
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe>também é muito legal</p>
+    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe>também é muito legal, pena que não funciona dentro do iframe</p>
 </body>
 </html>
