--- a/exercicios/modulo-04/ex024/iframe03.html
+++ b/exercicios/modulo-04/ex024/iframe03.html
@@ -20,7 +20,9 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates tenetur minima repellendus accusantium sapiente doloremque, fugiat minus quia quae omnis accusamus deserunt ullam officiis exercitationem dicta? Quis dolore reiciendis autem.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500">
+        <p>Infelizmente o seu navegador não é copatível com isso!</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo consectetur possimus mollitia, minima accusamus id atque at repellendus recusandae quaerat odit aperiam doloribus. Nam laborum sit a libero, magni cum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, vero. Facilis assumenda sint officia veritatis qui vitae. Voluptatem vero consequuntur, veritatis est perferendis soluta, voluptatum mollitia rem minus laudantium blanditiis.</p>
 </body>
