--- a/exercicios/modulo-04/ex024/iframe04.html
+++ b/exercicios/modulo-04/ex024/iframe04.html
@@ -28,7 +28,7 @@
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus, itaque dolorum rerum assumenda soluta unde possimus ullam iure, quibusdam, magni suscipit ex quia illo consequuntur sunt enim aspernatur asperiores laborum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio tenetur alias dicta velit corrupti vitae modi fugiat cum dolorem, suscipit tempora sint a et animi voluptatem nostrum, unde porro odio.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa vero commodi perspiciatis id cupiditate labore, distinctio tenetur sunt, provident a repellendus. Ad autem quaerat ea hic debitis quo minima aliquam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore et veritatis tenetur iusto amet, cum dolores suscipit! Est hic reprehenderit accusantium, quidem nostrum, quibusdam explicabo neque modi veritatis quis tempore?</p><img src='imagens/cursoemvideo.png'>">
         <p>Infelizmente o seu navegador não é compatível com isso!</p>
     </iframe>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa vero commodi perspiciatis id cupiditate labore, distinctio tenetur sunt, provident a repellendus. Ad autem quaerat ea hic debitis quo minima aliquam! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore et veritatis tenetur iusto amet, cum dolores suscipit! Est hic reprehenderit accusantium, quidem nostrum, quibusdam explicabo neque modi veritatis quis tempore?</p>
