--- a/desafio/modulo-03/desafio 015/desafio015.html
+++ b/desafio/modulo-03/desafio 015/desafio015.html
@@ -41,15 +41,19 @@
         .disciplinas{
             text-align: left;
         }
+
+        .realce {
+            font-weight: bolder;
+        }
     </style>
 </head>
 <body>
     <table>
         <thead>
             <tr>
-                <th rowspan="2">Área</th>
+                <th rowspan="2" scope="col">Área</th>
                 <th rowspan="2" scope="col">Disciplinas</th>
-                <th colspan="2" >Notas</th>
+                <th colspan="2" scope="colgroup">Notas</th>
                 <th rowspan="2" scope="col">Média</th>
                 <tr>
                     <th scope="col">Nota 1</th>
@@ -85,7 +89,7 @@
             </tr>
             <tr class="text">
                 <th colspan="4">Média de Exatas</th>
-                <td class="destaquenum">0.0</td>
+                <td class="destaquenum realce">0.0</td>
             </tr>
             <tr>
                 <th rowspan="2" scope="rowgroup">Humanas</th>
@@ -102,7 +106,7 @@
             </tr>
             <tr class="text">
                 <th colspan="4">Média de Humanas</th>
-                <td class="destaquenum">0.0</td>
+                <td class="destaquenum realce">0.0</td>
             </tr>
         </tbody>
     </table>
