--- a/exercicios/modulo-04/ex025/form03.html
+++ b/exercicios/modulo-04/ex025/form03.html
@@ -19,7 +19,7 @@
         </p>
         <p>
             <label for="imedia">Média: </label>
-            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" required>
+            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" step="0.1" value="5" required>
         </p>
         <p>
             <label for="imes">Período Letivo: <label>
