--- a/exercicios/modulo-04/ex025/form04.html
+++ b/exercicios/modulo-04/ex025/form04.html
@@ -20,7 +20,7 @@
             </p>
             <p>
                 <label for="itel">Telefone</label>
-                <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2})\d{4,5}-\d{4}$" required placeholder="(xx)xxxx-xxxx">
+                <input type="tel" name="tel" id="itel" autocomplete="tel" pattern="^\(\d{2}\)\d{4,5}-\d{4}$" required placeholder="(xx)xxxx-xxxx">
             </p>
         </fieldset>
         <!-- Estudar mais sobre RegEx-->
