--- a/exercicios/modulo-04/ex025/form05.html
+++ b/exercicios/modulo-04/ex025/form05.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
+    <style>
+        * {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
 </head>
 <body>
     <h1>Teste de Formulário</h1>
@@ -11,8 +16,8 @@
         <fieldset>
             <legend>Sexo</legend>
             <p>
-                <input type="radio" name="sexo" id="isxmas" checked> <label for="isxmas">Masculino</label><br>
-                <input type="radio" name="sexo" id="isxfem"> <label for="isxfem">Feminino</label>
+                <input type="radio" name="sexo" id="isxmas" checked value="M"> <label for="isxmas">Masculino</label><br>
+                <input type="radio" name="sexo" id="isxfem" value="F"> <label for="isxfem">Feminino</label>
             </p>
         </fieldset>
         <fieldset>
