--- a/exercicios/modulo-04/ex026/mq005/index.html
+++ b/exercicios/modulo-04/ex026/mq005/index.html
@@ -36,10 +36,10 @@
 
         
         function clickMenu() {
-           if (itens.style.display == 'block') {
+            if (itens.style.display == 'block') {
                 itens.style.display = 'none'
            } else {
-                itens.style.display == 'block'
+                itens.style.display = 'block'
            }
         }
     </script>
