--- a/exercicios/modulo-05/ex027/flex001/index.html
+++ b/exercicios/modulo-05/ex027/flex001/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexible Box</title>
     <style>
-        div.conteiner{
+        div.conteiner{/* conteiner pai leva o display: flex;*/
             background-color: lightsalmon;    
             
             display: flex;
