--- a/exercicios/modulo-05/ex027/flex008/index.html
+++ b/exercicios/modulo-05/ex027/flex008/index.html
@@ -22,7 +22,7 @@
         }
 
         div#i1{
-            align-items: flex-end;
+            align-self: flex-end;
         }
 
         div#i2{
@@ -30,7 +30,7 @@
         }
 
         div#i3{
-            align-self: flex-end;
+            align-self: stretch;
         }
 
         div#i4{
