--- a/exercicios/modulo-05/ex027/flex002/index.html
+++ b/exercicios/modulo-05/ex027/flex002/index.html
@@ -10,6 +10,12 @@
             
             display: flex;
             flex-direction: column;
+            /*
+            flex-direction: row;
+            flex-direction: row-reverse;
+            flex-direction: column;
+            flex-direction: column-reverse;
+            */
         }
 
         div.item{
