--- a/exercicios/modulo-05/ex027/flex003/index.html
+++ b/exercicios/modulo-05/ex027/flex003/index.html
@@ -9,7 +9,19 @@
             background-color: lightsalmon;    
             height: 100px;
             display: flex;
-            flex-flow: column wrap;
+            flex-flow: column wrap; /*Shorthand de flex direction + flex wrap*/
+            /*
+            flex-flow: <'flex-direction'> 
+                flex-flow: row;
+                flex-flow: row-reverse;
+                flex-flow: column;
+                flex-flow: column-reverse;
+
+            flex-flow: <'flex-wrap'> 
+                flex-flow: nowrap;
+                flex-flow: wrap;
+                flex-flow: wrap-reverse;
+            */
         }
 
         div.item{
