--- a/exercicios/modulo-05/ex027/flex004/index.html
+++ b/exercicios/modulo-05/ex027/flex004/index.html
@@ -11,7 +11,21 @@
             display: flex;
             flex-flow: row nowrap;
             justify-content: space-around;
+            /*
+                justify-content: flex-start;
+                justify-content: flex-end;
+                justify-content: center;
+                justify-content: space-between;
+                justify-content: space-evenly;
+                justify-content: space-around;
+            */
             align-items: stretch;
+            /*
+                align-items: stretch;
+                align-items: flex-start;
+                align-items: flex-end;
+                align-items: center;
+            */
         }
 
         div.item{
