--- a/exercicios/modulo-05/ex027/flex006/index.html
+++ b/exercicios/modulo-05/ex027/flex006/index.html
@@ -11,6 +11,15 @@
             display: flex;
             flex-flow: row wrap;
             align-content: space-around;
+            /*
+                align-content: stretch;
+                align-content: flex-start;
+                align-content: flex-end;
+                align-content: center;
+                align-content: space-between;
+                align-content: space-evenly;
+                align-content: space-around;
+            */
             height: 400px;
         }
 
