--- a/exercicios/modulo-05/ex027/flex014-conteudoflex/index.html
+++ b/exercicios/modulo-05/ex027/flex014-conteudoflex/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Exemplo de Conteúdo Flexível</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias molestias 
-            maiores repudiandae voluptas cupiditate, doloribus consequatur, quis deserunt minima praesentium enim? Non obcaecati sunt consectetur aperiam, odio culpa aspernatur facilis.
+        maiores repudiandae voluptas cupiditate, doloribus consequatur, quis deserunt minima praesentium enim? Non obcaecati sunt consectetur aperiam, odio culpa aspernatur facilis.
         </p>
     </header>
     <main>
@@ -30,9 +30,7 @@
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia dolorum voluptas fugiat modi sit dicta, repellendus inventore dolores quae harum perspiciatis voluptatibus fugit fuga itaque cum dolor ab totam sapiente! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut iusto labore voluptate sapiente, esse ipsa voluptatem perspiciatis nemo obcaecati harum similique et enim fuga nostrum quidem. Vero nesciunt minima voluptate?</p>
                 </div>
                 <div class="media">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/E0K6mAhxSkU?si=TcXbFjxzKCloabTv" 
-                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                    clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/E0K6mAhxSkU?si=TcXbFjxzKCloabTv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
                     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
             </article>
