--- a/desafio/modulo-01/desafio 05/index.html
+++ b/desafio/modulo-01/desafio 05/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <style>
+        img{
+            border-radius: 50%;
+        }
+    </style>
     <title>Social</title>
 </head>
 <body>
@@ -23,7 +28,7 @@
     <ul>
         <li>
             <img src="imagens/icone-youtube.png" alt="Youtube">
-            <a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">/cursoemvideo</a> - Se inscreve lá no canal do YouTube</li>
+            <a href="https://www.youtube.com/@MarcoHorner44" target="_blank" rel="external">/MarcoHorner</a> - Se inscreve lá no canal do YouTube</li>
         <li>
             <img src="imagens/icone-github.png" alt="GitHub">
             <a href="https://github.com/YagoWagner" target="_blank" rel="external">/YagoWagner</a> - Acesse o meu repositório do GitHub</li>
